# python-tools

./: .gitignore  README.md  config.ini  config.ini.example  main.py  pyproject.toml
data/: imoveis_detalhes.csv  imoveis_links.csv
sites/: chaves_na_mao.py
tools/: .gitignore
tools/check-image-ftp/: .gitignore  README.md  ftp_access.py  main.py
tools/compress-image/: .gitignore  README.md  main.py
tools/get-modification-date/: README.md  main.py
tools/merge-rgb-rinf/: .gitignore  README.md  folder.txt  main.py
tools/paranamap-backup-catalog/: README.md  main.py  requirements.txt
tools/photoshop-actions-automator/: .gitignore  README.md  main.py
tools/psb-vector-exporter/: .gitignore  ExportVector.spec  README.md  config.ini
tools/update-database/: README.md
tools/web-scraping/: README.md  main.py
