[project]
name = "export-vector"
version = "0.1.0"
description = "script para exportar poligonos em vetor (.psb)"
authors = [
    {name = "Bruno Taborda",email = "bruno.taborda1711@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "psd-tools (>=1.10.9,<2.0.0)",
    "fiona (>=1.10.1,<2.0.0)",
    "shapely (>=2.1.1,<3.0.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.16.0"

