[project]
name = "photoshopautomatization"
version = "0.1.0"
description = ""
authors = [
    {name = "Bruno Taborda",email = "bruno.taborda1711@gmail.com"}
]
readme = "README.md"
python = "3.12.*"
dependencies = [
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pywin32 (>=311,<312)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
